Modified vim setting.

--- a/.cheatsheet.md
+++ b/.cheatsheet.md
@@ -3,5 +3,13 @@
 ## vim-commentary
 
 - `gcc`         : 一行コメント
-- [visual] gc   : visual選択した個所をコメント
-- gc[cmd]       : vimの移動系コマンドで範囲をコメント
+- `[visual] gc` : visual選択した個所をコメント
+- `gc[cmd]`     : vimの移動系コマンドで範囲をコメント
+
+## fzf
+
+- `<Leader>tab` : Maps一覧の表示
+- `[fzf]l`      : Show commit log.
+- `[fzf]L`      : Show commit log for current buffer.
+- `[fzf]p`      : Show git ls-files.
+- `[fzf]P`      : Show git status.
